bynkc/tests/fixtures/positive/08_refined_string_length/input.bynk
commons demo {
  type CountryCode = String where Length(2)
}
