bynkc/tests/fixtures/negative/01_invalid_regex/input.bynk
commons demo {
  type Bad = String where Matches("[unclosed")
}
